Fix overlapping buttons on finished page
related #152

--- a/scss/_finished.scss
+++ b/scss/_finished.scss
@@ -17,12 +17,7 @@
   }
 
   .button {
-    width: 100%;
-
-    @media screen and (min-width: 768px)
-     {
-       width: 40%;
-     }
+    width: 40%;
   }
 }
 
